# ai-learning-notes

./: .gitignore  README.md  pyproject.toml
src/clean-dataset/: ARMAS_ROBERTO _Actividad_1.csv  clean-dataset.ipynb  data_profile.html  data_profile_after.html
src/cosede/: data-analysis.ipynb  data-dea.ipynb  reporte.html
src/cosede/dataset/: 2023-01-pago-del-seguro-de-depositos.csv  2023-02-pago-del-seguro-de-depositos.csv  2023-03-pago-del-seguro-de-depositos.csv  2023-04-pago-del-seguro-de-depositos.csv  2023-05-pago-del-seguro-de-depositos.csv  2023-06-pago-del-seguro-de-depositos.csv  2023-07-pago-del-seguro-de-depositos.csv  2023-08-pago-del-seguro-de-depositos.csv  2023-09-pago-del-seguro-de-depositos.csv  2023-10-pago-del-seguro-de-depositos.csv  2023-11-pago-del-seguro-de-depositos.csv  2023-12-pago-del-seguro-de-depositos.csv  2024-02-pago-del-seguro-de-depositos.csv  2024-03-pago-del-seguro-de-depositos.csv  2024-04-pago-del-seguro-de-depositos.csv  2024-05-pago-del-seguro-de-depositos.xlsx  2024-06-pago-del-seguro-de-depositos.csv  2024-07-pago-del-seguro-de-depositos.csv  2024-09-pago-del-seguro-de-depositos.csv  2024-10-pago-del-seguro-de-depositos.csv  2024-11-pago-del-seguro-de-depositos.csv  2024-12-pago-del-seguro-de-depositos.csv  2025-01-pago-del-seguro-de-depositos.csv  2025-02-pago-del-seguro-de-depositos.csv  2025-03-pago-del-seguro-de-depositos.csv  2025-04-pago-del-seguro-dde-depositos.csv  2025-05-pago-del-seguro-de-depositos.csv  (+2 more)
src/us-sales/: .gitignore  Product_Analysis.pbix  data-analysis.ipynb  sales.py
(+9 files in other folders)
