[project]
name = "ai-learning-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "faker>=37.3.0",
    "holidays>=0.72",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pycountry>=24.6.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "wbdata>=1.0.0",
]

[tool.uv.workspace]
members = [
    "src/k-means-analysis",
]
